// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSON - JSONPath With Columns 1`] = `
Object {
  "columns": Array [
    Object {
      "selector": "name",
      "text": "Name",
      "type": "string",
    },
  ],
  "name": "",
  "rows": Array [
    Array [
      "mary",
    ],
    Array [
      "joseph",
    ],
    Array [
      "john doe",
    ],
  ],
}
`;

exports[`JSON - JSONPath With multi Columns 1`] = `
Object {
  "columns": Array [
    Object {
      "selector": "name",
      "text": "Name",
      "type": "string",
    },
    Object {
      "selector": "age",
      "text": "Age",
      "type": "number",
    },
  ],
  "name": "",
  "rows": Array [
    Array [
      "mary",
      22,
    ],
    Array [
      "joseph",
      41,
    ],
    Array [
      "john doe",
      21,
    ],
  ],
}
`;

exports[`JSON - JSONPath With multi Columns 2`] = `
Object {
  "columns": Array [
    Object {
      "selector": "name",
      "text": "Name",
      "type": "string",
    },
    Object {
      "selector": "age",
      "text": "Age",
      "type": "number",
    },
  ],
  "name": "",
  "rows": Array [
    Array [
      "mary",
      22,
    ],
    Array [
      "joseph",
      41,
    ],
  ],
}
`;

exports[`JSON - JSONPath With multi Columns 3`] = `
Object {
  "columns": Array [
    Object {
      "selector": "name",
      "text": "Name",
      "type": "string",
    },
    Object {
      "selector": "age",
      "text": "Age",
      "type": "number",
    },
    Object {
      "selector": "gender",
      "text": "Gender",
      "type": "string",
    },
  ],
  "name": "",
  "rows": Array [
    Array [
      "mary",
      22,
      "female",
    ],
    Array [
      "joseph",
      41,
      "male",
    ],
  ],
}
`;
